linux fixes (still a wip)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,11 +22,11 @@ set ( REQUIRE_PNG "0" )
 set ( REQUIRE_TGA "0" )
 set ( REQUIRE_VEC "1" )
 set ( REQUIRE_CAM "1" )
-set ( REQUIRE_NVGUI "1" )
 set ( REQUIRE_GLEW "1" )
 set ( REQUIRE_DIRECTORY "0" )
 set ( REQUIRE_STRHELPER "0" )
 set ( REQUIRE_MAIN "1" )
+set ( REQUIRE_NVGUI "1" )
 
 # add_definitions(-DBUILD_BMP)
 
@@ -65,10 +65,9 @@ list( APPEND ALL_SOURCE_FILES ${UTIL_SOURCE_FILES} )
 list( APPEND ALL_SOURCE_FILES ${CUDA_FILES} )
 
 if ( NOT DEFINED WIN32 )
-  find_library(NVTOOLSEXT nvToolsExt HINTS ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
-  find_library(CUDART cudart HINTS ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
-  find_library(GVDBLIB gvdb HINTS ${GVDB_LIB_DIR} )
-  set(libdeps GL GLEW X11 cuda ${GVDBLIB} ${NVTOOLSEXT} ${CUDART})
+  #find_library(NVTOOLSEXT nvToolsExt HINTS ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
+  #set(libdeps GL GLEW X11 ${NVTOOLSEXT})
+  set(libdeps GL GLEW X11 )
   LIST(APPEND LIBRARIES_OPTIMIZED ${libdeps})
   LIST(APPEND LIBRARIES_DEBUG ${libdeps})
 ENDIF()
