--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,112 +1,69 @@
-cmake_minimum_required(VERSION 2.8)
-set(PROJNAME Invk)
-Project(${PROJNAME})
+cmake_minimum_required(VERSION 2.8...3.5)
+
+set(PROJNAME invk )
+Project(${PROJNAME} LANGUAGES C CXX)
+
 Message(STATUS "-------------------------------")
-Message(STATUS "Processing Project ${PROJNAME}:")
-
-####################################################################################
-# Bootstrap
-#
-set( BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
-find_path ( HELPERS_PATH "Helpers.cmake" HINTS ${BASE_DIRECTORY}/../libraries/helpers ${BASE_DIRECTORY}/helpers ${CMAKE_HELPERS_PATH} )
-if ( ${HELPERS_PATH} STREQUAL "HELPERS-NOTFOUND" )
-    message ( FATAL_ERROR "\n Please set the CMAKE_HELPERS_PATH to for cmake helpers." )
-endif()
-include( ${HELPERS_PATH}/Helpers.cmake )  # Cross-Platform functions
+Message(STATUS "Project: ${PROJNAME}")
 
 #####################################################################################
-# Sample requirements
-
-set ( REQUIRE_JPG "0" )
-set ( REQUIRE_PNG "0" )
-set ( REQUIRE_TGA "0" )
-set ( REQUIRE_VEC "1" )
-set ( REQUIRE_CAM "1" )
-set ( REQUIRE_GLEW "1" )
-set ( REQUIRE_DIRECTORY "0" )
-set ( REQUIRE_STRHELPER "0" )
-set ( REQUIRE_MAIN "1" )
-set ( REQUIRE_NVGUI "1" )
-
-# add_definitions(-DBUILD_BMP)
-
-
-####################################################################################
-# Find Sample Utils
+# LIBMIN Bootstrap
 #
-find_package(Utils)
+set ( LIBMIN_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../libmin" CACHE STRING "Location of Libmin")
+list( APPEND CMAKE_MODULE_PATH "${LIBMIN_ROOT}/cmake" )
+list( APPEND CMAKE_PREFIX_PATH "${LIBMIN_ROOT}/cmake" )
+
+find_package(Libmin)
 
 #####################################################################################
-# Require OpenGL
-#
-IF(WIN32)
-  LIST(APPEND LIBRARIES_OPTIMIZED "opengl32.lib" )
-  LIST(APPEND LIBRARIES_DEBUG "opengl32.lib" )
-ENDIF()
+# Options
 
-#####################################################################################
-# Source files for this project
-#
-file(GLOB SOURCE_FILES *.cpp *.c *.h )
+_REQUIRE_DATAPTR()
+_REQUIRE_IMAGE()
+_REQUIRE_GXLIB()
+_REQUIRE_3D()
 
+_REQUIRE_MAIN()
 
-########################################################################3
-# Collect shaders for reference
-file(GLOB GLSL_FILES ${ASSET_PATH}/*.glsl )
+_REQUIRE_GL()
+
+_REQUIRE_GLEW()
 
 #####################################################################################
 # Executable
 #
-unset ( ALL_SOURCE_FILES )
-list( APPEND ALL_SOURCE_FILES ${SOURCE_FILES} )
-list( APPEND ALL_SOURCE_FILES ${COMMON_SOURCE_FILES} )
-list( APPEND ALL_SOURCE_FILES ${PACKAGE_SOURCE_FILES} )
-list( APPEND ALL_SOURCE_FILES ${UTIL_SOURCE_FILES} )
-list( APPEND ALL_SOURCE_FILES ${CUDA_FILES} )
+file(GLOB MAIN_FILES *.cpp *.h )
 
-if ( NOT DEFINED WIN32 )
-  #find_library(NVTOOLSEXT nvToolsExt HINTS ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
-  #set(libdeps GL GLEW X11 ${NVTOOLSEXT})
-  set(libdeps GL GLEW X11 )
-  LIST(APPEND LIBRARIES_OPTIMIZED ${libdeps})
-  LIST(APPEND LIBRARIES_DEBUG ${libdeps})
-ENDIF()
+_GET_GLOBALS()
 
-include_directories ("${CMAKE_CURRENT_SOURCE_DIR}")    
-add_definitions(-DGVDB_IMPORTS -DGLEW_STATIC -DGLEW_NO_GLU)  
-add_definitions(-DASSET_PATH="${ASSET_PATH}/")
-add_executable (${PROJNAME} ${ALL_SOURCE_FILES} ${CUDA_FILES} ${PTX_SOURCES} ${GLSL_FILES} )
-set_property ( TARGET ${PROJNAME} APPEND PROPERTY DEPENDS ${PTX_SOURCES} )
+add_executable (${PROJNAME} ${MAIN_FILES} ${CUDA_FILES} ${PACKAGE_SOURCE_FILES} ${LIBMIN_FILES})
 
-
-if ( MSVC  )
-    set_target_properties( ${PROJNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH} )
-    set_target_properties( ${PROJNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${EXECUTABLE_OUTPUT_PATH} )
-    set_target_properties( ${PROJNAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${EXECUTABLE_OUTPUT_PATH} )    	
-	source_group(CUDA FILES ${CUDA_FILES})
-	source_group(PTX FILES  ${PTX_FILES})
-	source_group(Helpers FILES ${UTIL_SOURCE_FILES})
-
-	source_group(Core FILES ${SOURCE_FILES})
-endif ()
-
-
+_LINK ( PROJECT ${PROJNAME} OPT ${LIBS_OPTIMIZED} DEBUG ${LIBS_DEBUG} PLATFORM ${LIBS_PLATFORM} )
 
 #####################################################################################
-# Library dependencies
+# IDE Setup
 #
-set_property(GLOBAL PROPERTY DEBUG_CONFIGURATIONS Debug) 
+_STARTUP_PROJECT ()
+source_group("Source Files" FILES ${MAIN_FILES} ${PACKAGE_SOURCE_FILES})
+source_group("CUDA" FILES ${CUDA_FILES} )
 
-foreach (loop_var IN ITEMS ${LIBRARIES_OPTIMIZED} )   
-   target_link_libraries ( ${PROJNAME} optimized ${loop_var} )
-endforeach()
+#####################################################################################
+# Install Binaries
+#
+install_files ( FILES ${PACKAGE_DLLS} DESTINATION . )    	# DLLs
+install ( FILES $<TARGET_PDB_FILE:${PROJNAME}> OPTIONAL DESTINATION .)   	# PDB
+install ( FILES ${INSTALL_LIST} DESTINATION .)				# EXE
 
-foreach (loop_var IN ITEMS ${LIBRARIES_DEBUG} )
-   target_link_libraries ( ${PROJNAME} debug ${loop_var} )
-endforeach()
+###########################
+# Done
+message ( STATUS "  Source Path: ${CMAKE_CURRENT_SOURCE_DIR}" )
+message ( STATUS "  Binary Path: ${CMAKE_CURRENT_BINARY_DIR}" )
+message ( STATUS "  Libs Optimized:   ${LIBS_OPTIMIZED}" )
+message ( STATUS "  Libs Debug:  ${LIBS_DEBUG}" )
+message ( STATUS "  Libs Platform:  ${LIBS_PLATFORM}" )
+message ( STATUS "  Packaged DLLs:   ${PACKAGE_DLLS}" )
+message ( STATUS "  OUTPUT PATH:     ${CMAKE_INSTALL_PREFIX}" )
 
-message ( STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}" )
-message ( STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}" )
-message ( STATUS "EXECUTABLE_OUTPUT_PATH: ${EXECUTABLE_OUTPUT_PATH}" )
+
 
 
